--- a/references.bib
+++ b/references.bib
@@ -1457,3 +1457,62 @@
   DATE_ADDED =   {Fri Sep 2 15:24:43 2016},
 }
 
+@article{pickard-2016-carbon-nitrid,
+  author =       {Chris J. Pickard and Ashkan Salamat and Michael
+                  J. Bojdys and Richard J. Needs and Paul F. McMillan},
+  title =        {Carbon Nitride Frameworks and Dense Crystalline
+                  Polymorphs},
+  journal =      {Physical Review B},
+  volume =       94,
+  number =       9,
+  pages =        094104,
+  year =         2016,
+  doi =          {10.1103/physrevb.94.094104},
+  url =          {http://dx.doi.org/10.1103/PhysRevB.94.094104},
+  DATE_ADDED =   {Mon Sep 12 15:56:47 2016},
+}
+
+@article{artrith-2016-implem-artif,
+  author =       {Nongnuch Artrith and Alexander Urban},
+  title =        {An Implementation of Artificial Neural-Network
+                  Potentials for Atomistic Materials Simulations:
+                  Performance for Tio2},
+  journal =      {Computational Materials Science},
+  volume =       114,
+  number =       {nil},
+  pages =        {135-150},
+  year =         2016,
+  doi =          {10.1016/j.commatsci.2015.11.047},
+  url =          {http://dx.doi.org/10.1016/j.commatsci.2015.11.047},
+  DATE_ADDED =   {Mon Sep 12 15:57:16 2016},
+}
+
+@article{henkelman-2000-climb-image,
+  author =       {Graeme Henkelman and Blas P. Uberuaga and Hannes
+                  J{\'o}nsson},
+  title =        {A Climbing Image Nudged Elastic Band Method for
+                  Finding Saddle Points and Minimum Energy Paths},
+  journal =      {The Journal of Chemical Physics},
+  volume =       113,
+  number =       22,
+  pages =        9901,
+  year =         2000,
+  doi =          {10.1063/1.1329672},
+  url =          {http://dx.doi.org/10.1063/1.1329672},
+  DATE_ADDED =   {Mon Sep 12 16:07:39 2016},
+}
+
+@article{kit-2012-twist-graph,
+  author =       {O. O. Kit and T. Tallinen and L. Mahadevan and
+                  J. Timonen and P. Koskinen},
+  title =        {Twisting Graphene Nanoribbons Into Carbon Nanotubes},
+  journal =      {Phys. Rev. B},
+  volume =       85,
+  number =       8,
+  pages =        085428,
+  year =         2012,
+  doi =          {10.1103/physrevb.85.085428},
+  url =          {http://dx.doi.org/10.1103/PhysRevB.85.085428},
+  DATE_ADDED =   {Mon Sep 12 19:21:42 2016},
+}
+
